fixed spacing on footer. added height and relative positioning. Added links to barber cards

--- a/ace/src/app/gallery/gallerypage.css
+++ b/ace/src/app/gallery/gallerypage.css
@@ -2,7 +2,7 @@
     margin: 10% auto;
     text-align: center;
     max-width: 1200px;
-    height: 45vh;
+    height: 100%;
 }
 
 .gallery__grid {
