--- a/ace/src/app/homepage/homepage.css
+++ b/ace/src/app/homepage/homepage.css
@@ -15,7 +15,6 @@
 }
 
 .landscape__video--container {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -207,6 +206,8 @@
     margin: 10% auto;
     text-align: center;
     max-width: 1200px;
+    position: relative;
+    height: 100%;
 }
 
 .homepage__gallery--title {
@@ -263,6 +264,8 @@
 /* Info Section */
 
 .homepage__info--container {
+    position: relative;
+    z-index: 1;
     margin: 10% auto;
     max-width: 1200px;
     text-align: center;
