--- a/ace/src/app/team/teampage.css
+++ b/ace/src/app/team/teampage.css
@@ -10,6 +10,7 @@
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
+    height: 100%;
 }
 
 .team__landscape--image {
